# pydantic-agent-template

./: .env.example  .gitignore  README.md  pyproject.toml
app/: database.py  health.py  main.py  models.py  schemas.py
app/agent/: context.py  core.py  prompts.py
app/routers/: chat.py
